--- a/.github/workflows/exerciceSpring.yml
+++ b/.github/workflows/exerciceSpring.yml
@@ -1,10 +1,12 @@
-name: exerciceSpring push workflow
+name: exerciceSpringBuild
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  premier-job:
-    name: build
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -12,13 +14,39 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '17'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: Install dependencies
-        run: mvn install -DskipTests
+        run: ./mvnw install -DskipTests
 
-      - name: Echo message Build OK
-        run: echo "the build is ok"
+      - name: Build the application
+        run: ./mvnw package -DskipTests
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: target/Exercice6Spring-0.0.1-SNAPSHOT.jar
+
+  download:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Récupérer l'artefact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact
+
+      - name: Lister les fichiers
+        run: ls
